@@ -237,7 +237,8 @@ class BaseScoreSetting(generic.base.EntityRelatedMixin, generic.CheckedView):
         model_id = get_from_POST_or_404(request.POST, self.model_id_arg, int)
 
         try:
-            self.update_stategy(
+            # self.update_stategy(
+            self.update_strategy(
                 strategy=strategy,
                 model_id=model_id,
                 **self.get_update_kwargs()
@@ -247,17 +248,20 @@ class BaseScoreSetting(generic.base.EntityRelatedMixin, generic.CheckedView):
 
         return HttpResponse()
 
-    def update_stategy(self, *, strategy, model_id, **kwargs):
+    # def update_stategy(self, *, strategy, model_id, **kwargs):
+    def update_strategy(self, *, strategy, model_id, **kwargs):
         raise NotImplementedError
 
 
 class AssetScoreSetting(BaseScoreSetting):
-    def update_stategy(self, *, strategy, model_id, **kwargs):
+    # def update_stategy(self, *, strategy, model_id, **kwargs):
+    def update_strategy(self, *, strategy, model_id, **kwargs):
         strategy.set_asset_score(asset_id=model_id, **kwargs)
 
 
 class CharmScoreSetting(BaseScoreSetting):
-    def update_stategy(self, *, strategy, model_id, **kwargs):
+    # def update_stategy(self, *, strategy, model_id, **kwargs):
+    def update_strategy(self, *, strategy, model_id, **kwargs):
         strategy.set_charm_score(charm_id=model_id, **kwargs)
 
 
